Made Site's about me section more responsivbely responsive to avoid it from spilling over into other sections when resizing. Changed location of anchor for home in navbar.

--- a/src/public/styles/main.scss
+++ b/src/public/styles/main.scss
@@ -179,7 +179,7 @@ h1 {
 
     img {
       padding-right: 55px;
-      height: 100%;
+      height: 80%;
       max-width: auto;
     }
   }
@@ -193,18 +193,16 @@ h1 {
     flex-direction: column;
     justify-content: center;
     text-align: justify;
-    width: 60%;
+    width: 82%;
     margin: 0 auto;
   }
 
   h1 {
-    // font-size: 2.7rem;
-    // text-align: center;
     padding-bottom: 5rem;
   }
 
   span {
-    font-size: 1.7rem;
+    font-size: 1.6rem;
     text-align: justify;
     padding-top: 15px;
   }
@@ -212,7 +210,7 @@ h1 {
     text-align: justify;
     list-style: inside;
     li {
-      font-size: 1.7rem;
+      font-size: 1.6rem;
     }
   }
 }
